--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 <body class="">
   <!--#include file="./src/pages/projects.html" -->
   <div class="flex items-center flex-col mx-8">
-
     <header class="w-full flex items-center py-6">
-      <h1 id="intro" class="text-2xl font-semibold text-gray-800">Daniel Moderiano</h1>
       <!-- Navbar provides HTML bookmark links to scroll down page to section -->
-      <nav>
+      <nav role="navigation" aria-label="Main menu">
         <ul class="flex items-center">
           <li class="px-2">
             <a class="hover:underline" href="#intro">Intro</a>
           </li>
           <li class="px-2">
-            <a class="hover:underline" href="#skills">Skills</a>
+            <a class="hover:underline" href="#skills">Technologies</a>
           </li>
           <li class="px-2">
             <a class="hover:underline" href="#projects">Projects</a>
@@ -31,12 +29,13 @@
         </ul>
       </nav>
     </header>
-    <main class="flex flex-col items-start w-full">
+    <main class="flex flex-col items-start w-full" role="main">
 
       <!-- INTRODUCTION section -->
       <section id="intro" class="my-4 w-full">
-        <h2 class="text-xl font-semibold text-gray-800">Daniel Moderiano</h2>
-        <p>Full stack web developer</p>
+        <h2 class="text-3xl font-semibold text-gray-800">Hi, I'm Daniel.</h2>
+        <!-- <p>I'm a full stack web developer.</p> -->
+        <p class="text-2xl">I'm a full stack web developer</p>
       </section>
 
       <!-- SKILLS/TECH STACK section -->
@@ -68,7 +67,6 @@
                 <path fill="#fff"
                   d="M255.805 208.59v56.517H325.4l-6.56 73.299-63.035 17.013v58.8l115.864-32.112.85-9.549 13.28-148.792 1.38-15.176 10.203-114.393H255.805v56.518h79.639L330.3 208.59z" />
               </svg>
-
 
               <span class="text-sm mt-1">CSS</span>
             </li>
@@ -202,33 +200,6 @@
               </svg>
               <span class="text-sm mt-1">Firebase</span>
             </li>
-            <li class="flex flex-col items-center justify-center">
-              <svg viewBox="0 0 256 255" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" class="w-10 h-10">
-                <defs>
-                  <linearGradient x1="12.9593594%" y1="12.0393928%" x2="79.6388325%" y2="78.2008538%"
-                    id="linearGradient-1">
-                    <stop stop-color="#387EB8" offset="0%"></stop>
-                    <stop stop-color="#366994" offset="100%"></stop>
-                  </linearGradient>
-                  <linearGradient x1="19.127525%" y1="20.5791813%" x2="90.7415328%" y2="88.4290372%"
-                    id="linearGradient-2">
-                    <stop stop-color="#FFE052" offset="0%"></stop>
-                    <stop stop-color="#FFC331" offset="100%"></stop>
-                  </linearGradient>
-                </defs>
-                <g>
-                  <path
-                    d="M126.915866,0.0722755491 C62.0835831,0.0722801733 66.1321288,28.1874648 66.1321288,28.1874648 L66.2044043,57.3145115 L128.072276,57.3145115 L128.072276,66.0598532 L41.6307171,66.0598532 C41.6307171,66.0598532 0.144551098,61.3549438 0.144551098,126.771315 C0.144546474,192.187673 36.3546019,189.867871 36.3546019,189.867871 L57.9649915,189.867871 L57.9649915,159.51214 C57.9649915,159.51214 56.8001363,123.302089 93.5968379,123.302089 L154.95878,123.302089 C154.95878,123.302089 189.434218,123.859386 189.434218,89.9830604 L189.434218,33.9695088 C189.434218,33.9695041 194.668541,0.0722755491 126.915866,0.0722755491 L126.915866,0.0722755491 L126.915866,0.0722755491 Z M92.8018069,19.6589497 C98.9572068,19.6589452 103.932242,24.6339846 103.932242,30.7893845 C103.932246,36.9447844 98.9572068,41.9198193 92.8018069,41.9198193 C86.646407,41.9198239 81.6713721,36.9447844 81.6713721,30.7893845 C81.6713674,24.6339846 86.646407,19.6589497 92.8018069,19.6589497 L92.8018069,19.6589497 L92.8018069,19.6589497 Z"
-                    fill="url(#linearGradient-1)"></path>
-                  <path
-                    d="M128.757101,254.126271 C193.589403,254.126271 189.540839,226.011081 189.540839,226.011081 L189.468564,196.884035 L127.600692,196.884035 L127.600692,188.138693 L214.042251,188.138693 C214.042251,188.138693 255.528417,192.843589 255.528417,127.427208 C255.52844,62.0108566 219.318366,64.3306589 219.318366,64.3306589 L197.707976,64.3306589 L197.707976,94.6863832 C197.707976,94.6863832 198.87285,130.896434 162.07613,130.896434 L100.714182,130.896434 C100.714182,130.896434 66.238745,130.339138 66.238745,164.215486 L66.238745,220.229038 C66.238745,220.229038 61.0044225,254.126271 128.757101,254.126271 L128.757101,254.126271 L128.757101,254.126271 Z M162.87116,234.539597 C156.715759,234.539597 151.740726,229.564564 151.740726,223.409162 C151.740726,217.253759 156.715759,212.278727 162.87116,212.278727 C169.026563,212.278727 174.001595,217.253759 174.001595,223.409162 C174.001618,229.564564 169.026563,234.539597 162.87116,234.539597 L162.87116,234.539597 L162.87116,234.539597 Z"
-                    fill="url(#linearGradient-2)"></path>
-                </g>
-              </svg>
-
-              <span class="text-sm mt-1">Python</span>
-            </li>
           </ul>
         </section>
 
@@ -261,17 +232,6 @@
               </svg>
               <span class="text-sm mt-1">Jest</span>
             </li>
-            <li class="flex flex-col items-center justify-center">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-                style="enable-background:new 0 0 512 512;" xml:space="preserve" class="w-10 h-10">
-                <g>
-                  <path fill="#430098"
-                    d="M440.4,0H71.7C46.3,0,25.6,20.6,25.6,46.1v419.8c0,25.5,20.7,46.1,46.1,46.1h368.7c25.4,0,46.1-20.6,46.1-46.1 V46.1C486.4,20.6,465.8,0,440.4,0z M460.8,465.9c0,11.3-9.2,20.5-20.5,20.5H71.7c-11.3,0-20.5-9.2-20.5-20.5V46.1	c0-11.3,9.2-20.5,20.5-20.5h368.7c11.3,0,20.5,9.2,20.5,20.5V465.9z M140.8,435.2l57.6-51.2l-57.6-51.2V435.2z M348.9,227.7	c-10.4-10.4-29.3-22.9-60.9-22.9c-34.7,0-70.5,9-96,17.3V76.8h-51.2v222l36.2-16.4c0.6-0.3,58.9-26.4,111-26.4 c26,0,31.7,14.3,32,26.3v152.9h51.2V281.6C371.3,278.3,370.9,249.9,348.9,227.7 M281.6,160h51.2c23.1-26.2,34.9-54.1,38.4-83.2	h-51.2C314.3,105.8,301.7,133.6,281.6,160" />
-                </g>
-              </svg>
-              <span class="text-sm mt-1">Heroku</span>
-            </li>
           </ul>
         </section>
 
@@ -286,7 +246,7 @@
         <article class="border p-4 my-4 bg-white rounded flex flex-col">
           <h3 class="text-lg font-semibold">OptomRx</h3>
           <p>OptomRx is an industry-first web app for Australian optometrists to create and manage professional
-            therapeutic prescriptions online. Now integrated into several optometry practices across the country - OptomRx sees ongoing use in daily clinical practice.</p>
+            therapeutic prescriptions online. Currently integrated into several optometry practices across the country - OptomRx sees daily use in clinical practice.</p>
           <img src="./src/assets/images/optomrx-small.png" alt="optomrx web app dashboard">
 
           <!-- Tech stack -->
@@ -342,6 +302,7 @@
                   fill="url(#d)"></path>
               </g>
             </svg>
+            <img src="./src/assets/icons/styled-components.png" alt="styled components logo" class="w-8 h-8 mr-2" >
           </div>
 
           <!-- Project links -->
@@ -373,13 +334,13 @@
               <path fill="#689F63"
                 d="M224 508c-6.7 0-13.5-1.8-19.4-5.2l-61.7-36.5c-9.2-5.2-4.7-7-1.7-8 12.3-4.3 14.8-5.2 27.9-12.7 1.4-.8 3.2-.5 4.6.4l47.4 28.1c1.7 1 4.1 1 5.7 0l184.7-106.6c1.7-1 2.8-3 2.8-5V149.3c0-2.1-1.1-4-2.9-5.1L226.8 37.7c-1.7-1-4-1-5.7 0L36.6 144.3c-1.8 1-2.9 3-2.9 5.1v213.1c0 2 1.1 4 2.9 4.9l50.6 29.2c27.5 13.7 44.3-2.4 44.3-18.7V167.5c0-3 2.4-5.3 5.4-5.3h23.4c2.9 0 5.4 2.3 5.4 5.3V378c0 36.6-20 57.6-54.7 57.6-10.7 0-19.1 0-42.5-11.6l-48.4-27.9C8.1 389.2.7 376.3.7 362.4V149.3c0-13.8 7.4-26.8 19.4-33.7L204.6 9c11.7-6.6 27.2-6.6 38.8 0l184.7 106.7c12 6.9 19.4 19.8 19.4 33.7v213.1c0 13.8-7.4 26.7-19.4 33.7L243.4 502.8c-5.9 3.4-12.6 5.2-19.4 5.2zm149.1-210.1c0-39.9-27-50.5-83.7-58-57.4-7.6-63.2-11.5-63.2-24.9 0-11.1 4.9-25.9 47.4-25.9 37.9 0 51.9 8.2 57.7 33.8.5 2.4 2.7 4.2 5.2 4.2h24c1.5 0 2.9-.6 3.9-1.7s1.5-2.6 1.4-4.1c-3.7-44.1-33-64.6-92.2-64.6-52.7 0-84.1 22.2-84.1 59.5 0 40.4 31.3 51.6 81.8 56.6 60.5 5.9 65.2 14.8 65.2 26.7 0 20.6-16.6 29.4-55.5 29.4-48.9 0-59.6-12.3-63.2-36.6-.4-2.6-2.6-4.5-5.3-4.5h-23.9c-3 0-5.3 2.4-5.3 5.3 0 31.1 16.9 68.2 97.8 68.2 58.4-.1 92-23.2 92-63.4z" />
             </svg>
-            <svg viewBox="0 0 52 30" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 mr-1.5">
+            <svg viewBox="0 0 52 30" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 mr-1">
               <path
                 d="M51.7026 29.1934C50.9501 29.478 50.1195 29.4774 49.3674 29.1917C48.6154 28.9059 47.9939 28.3548 47.6203 27.6424L40.188 17.3643L39.1109 15.9274L30.4873 27.6553C30.1361 28.3379 29.5484 28.8692 28.8339 29.1499C28.1195 29.4306 27.3272 29.4415 26.6053 29.1805L37.7171 14.2729L27.3808 0.806564C28.1241 0.538734 28.9369 0.535183 29.6824 0.79651C30.4279 1.05784 31.0606 1.56808 31.474 2.24131L39.1777 12.6465L46.9244 2.2844C47.2783 1.61396 47.8662 1.09693 48.5764 0.831615C49.2866 0.566296 50.0695 0.571181 50.7763 0.845341L46.765 6.16855L41.3319 13.241C41.181 13.3756 41.0603 13.5406 40.9776 13.7251C40.895 13.9096 40.8522 14.1095 40.8522 14.3117C40.8522 14.5139 40.895 14.7138 40.9776 14.8983C41.0603 15.0828 41.181 15.2478 41.3319 15.3824L51.6811 29.1956L51.7026 29.1934ZM0.00433439 14.0877L0.90913 9.61755C3.39516 0.77856 13.5289 -2.89879 20.5001 2.57307C24.5824 5.78078 25.6014 10.322 25.4011 15.4405H2.4042C2.03151 24.5811 8.62789 30.1004 17.0619 27.2804C18.4291 26.7883 19.6529 25.9647 20.6237 24.8834C21.5944 23.8021 22.2818 22.4969 22.6242 21.0847C23.0701 19.65 23.8048 19.4044 25.1533 19.818C24.9286 21.5681 24.3099 23.2445 23.3439 24.721C22.3778 26.1975 21.0895 27.4357 19.5759 28.3425C17.0757 29.7101 14.2071 30.2521 11.3802 29.8911C8.5534 29.5301 5.91307 28.2846 3.83679 26.3326C1.78383 24.0219 0.543067 21.103 0.303778 18.0214C0.303778 17.5151 0.131437 17.0412 0.0151058 16.5866C0.00461882 15.7544 -0.000407927 14.9221 2.58433e-05 14.0898L0.00433439 14.0877ZM2.4322 13.4715H23.2296C23.1003 6.845 18.9189 2.14437 13.3414 2.10128C7.13283 2.01511 2.69071 6.61233 2.41712 13.4414L2.4322 13.4715Z"
                 fill="#000000" />
             </svg>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 67" fill="#fff" fill-rule="evenodd" stroke="#000"
-              stroke-linecap="round" stroke-linejoin="round" class="w-8 h-8 mr-2">
+              stroke-linecap="round" stroke-linejoin="round" class="w-8 h-8 mr-1">
               <g stroke="none" fill-rule="nonzero">
                 <path
                   d="M14.174.175l1.708 3.208c.371.579.804 1.117 1.29 1.604 1.43 1.43 2.788 2.928 4.008 4.532 2.894 3.8 4.846 8 6.24 12.584a30.94 30.94 0 0 1 1.324 8.54c.14 8.646-2.824 16.07-8.8 22.24-.972.978-2.022 1.876-3.14 2.684-.592 0-.872-.454-1.116-.872-.454-.766-.732-1.64-.872-2.51-.21-1.046-.348-2.092-.28-3.172v-.488c-.048-.124-.57-48.124-.362-48.35z"
@@ -391,6 +352,14 @@
                   d="M15.882 57.691c.07-.8.454-1.464.872-2.126-.4-.174-.732-.52-.976-.906a6.47 6.47 0 0 1-.52-1.15c-.488-1.464-.592-3-.732-4.496v-.906c-.174.14-.21 1.324-.21 1.5-.102 1.581-.312 3.154-.628 4.706-.104.628-.174 1.254-.56 1.812 0 .07 0 .14.034.244.628 1.848.8 3.73.906 5.648v.7c0 .836-.034.66.66.94.28.104.592.14.872.348.21 0 .244-.174.244-.314l-.104-1.15v-3.208c-.034-.56.07-1.116.14-1.64z"
                   fill="#c2bfbf" />
               </g>
+            </svg>
+            <svg viewBox="0 0 1000 1000" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 mr-2">
+              <path
+                d="M489.5 226.499C328 231.632 280 346.999 269 409.499C283.333 386.332 328.5 335.5 395 335.5C472.5 335.5 531.5 422 567.5 449C611.237 481.803 699.123 525.115 814.5 490C906.5 462 949.167 364.332 958.5 317.999C914 378.499 846.5 414.838 763 371.999C705.5 342.499 662.5 221 489.5 226.499Z"
+                fill="#38bdf8" />
+              <path
+                d="M261 500.999C99.5 506.132 51.5 621.499 40.5 683.999C54.8333 660.832 100 610 166.5 610C244 610 303 696.5 339 723.5C382.737 756.303 470.623 799.615 586 764.5C678 736.5 720.667 638.832 730 592.499C685.5 652.999 618 689.338 534.5 646.499C477 616.999 434 495.5 261 500.999Z"
+                fill="#38bdf8" />
             </svg>
           </div>
           <!-- Project links -->
@@ -433,7 +402,7 @@
 
     </main>
 
-    <footer>
+    <footer role="contentinfo">
       <p class="text-gray-700 text-sm">&copy; 2022 Daniel Moderiano</p>
     </footer>
   </div>
