--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 
 <body class="relative">
 
-  <header role="banner" class="px-2 py-3 text-black shadow-sm fixed top-0 left-0 w-full font-light text-lg bg-white transition-all duration-300">
+  <header role="banner"
+    class="px-2 py-3 text-black shadow-sm fixed top-0 left-0 w-full font-light text-lg bg-white transition-all duration-300">
     <nav id="mainmenu" role="navigation" aria-label="Main menu">
       <ul class="flex items-center justify-evenly" role="menubar">
         <li class="px-2" role="none">
-          <a class="decoration-gray-600 decoration-from-font font-semibold underline-offset-4" href="#home" role="menuitem">Home</a>
+          <a class="decoration-gray-600 decoration-from-font font-semibold underline-offset-4" href="#home"
+            role="menuitem">Home</a>
         </li>
         <li class="px-2" role="none">
           <a class="hover:underline text" href="#skills" role="menuitem">Skills</a>
@@ -36,12 +38,40 @@
       <section id="home" class="w-full h-screen flex flex-col items-start justify-center">
         <h1 class="text-3xl font-semibold ">Hi, I'm Daniel.</h1>
         <p class="text-2xl">I'm a full stack web developer</p>
+
+        <ul class="flex items-center justify-start mt-4" role="menubar">
+          <li role="none" class="mr-4">
+            <a href="https://github.com/daniel-moderiano" role="menuitem">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" class="w-7">
+                <path
+                  d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
+              </svg>
+              <span class="sr-only">GitHub profile</span>
+            </a>
+          </li>
+          <li role="none" class="mr-4">
+            <a href="https://www.linkedin.com/in/daniel-moderiano-2a0429a9/" role="menuitem">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-7">
+                <path
+                  d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
+              </svg>
+              <span class="sr-only">LinkedIn Profile</span>
+            </a>
+          </li>
+          <li role="none" class="mr-3">
+            <a href="#" class="underline flex items-center justify-center font-semibold" target="_blank" rel="no-referrer">
+              Resume
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-3 ml-1 mt-0.5"><path d="M384 320c-17.67 0-32 14.33-32 32v96H64V160h96c17.67 0 32-14.32 32-32s-14.33-32-32-32L64 96c-35.35 0-64 28.65-64 64V448c0 35.34 28.65 64 64 64h288c35.35 0 64-28.66 64-64v-96C416 334.3 401.7 320 384 320zM488 0H352c-12.94 0-24.62 7.797-29.56 19.75c-4.969 11.97-2.219 25.72 6.938 34.88L370.8 96L169.4 297.4c-12.5 12.5-12.5 32.75 0 45.25C175.6 348.9 183.8 352 192 352s16.38-3.125 22.62-9.375L416 141.3l41.38 41.38c9.156 9.141 22.88 11.84 34.88 6.938C504.2 184.6 512 172.9 512 160V24C512 10.74 501.3 0 488 0z"/></svg>
+              <span class="sr-only">(opens in a new tab)</span>
+            </a>
+          </li>
+        </ul>
       </section>
 
       <!-- SKILLS/TECH STACK section -->
       <!-- If issues with SVG flashing on load continue, add explicit height/width properties to the SVG tag itself -->
       <section id="skills" class="my-4 w-full">
-        <h2 class="text-xl font-semibold text-gray-800">Technologies</h2>
+        <h2 class="text-xl font-semibold text-gray-800 mt-24">Technologies</h2>
 
         <!-- FRONTEND section -->
         <section class="my-4 text-center ">
@@ -234,19 +264,21 @@
             </li>
           </ul>
         </section>
-
       </section>
 
 
       <!-- PROJECTS section -->
       <section id="projects" class="mt-4 mb-24 w-full">
-        <h2 class="text-2xl font-semibold text-gray-800 w-full text-center mb-4">Projects</h2>
+        <h2 class="text-3xl uppercase font-semibold text-gray-800 w-full text-center tracking-wide mt-24">Projects</h2>
+        <div class="bg-gray-800 h-0.5 w-56 mx-auto mt-10 mb-12"></div>
 
         <!-- OPTOMRX -->
-        <article class="mt-8 mb-4  flex flex-col">
+        <article class=" mb-4 flex flex-col">
           <img src="./src/assets/images/optomrx-small.png" alt="optomrx web app dashboard">
           <h3 class="text-xl font-semibold mt-1 mb-4">OptomRx</h3>
-          <p class="mb-4">OptomRx is an industry-first web app for Australian optometrists to create and manage professional therapeutic prescriptions online. Currently integrated into several optometry practices across the country; OptomRx sees daily use in clinical practice.</p>
+          <p class="mb-4">OptomRx is an industry-first web app for Australian optometrists to create and manage
+            professional therapeutic prescriptions online. Currently integrated into several optometry practices across
+            the country; OptomRx sees daily use in clinical practice.</p>
 
           <!-- Tech stack -->
           <div class="hidden flex items-center justify-start my-2">
@@ -306,8 +338,10 @@
 
           <!-- Project links -->
           <div class="flex items-center justify-start mb-6">
-            <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline" href="https://github.com/daniel-moderiano/optom-rx">View code</a>
-            <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline" href="https://optomrx.net/">Visit website</a>
+            <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline"
+              href="https://github.com/daniel-moderiano/optom-rx">View code</a>
+            <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline" href="https://optomrx.net/">Visit
+              website</a>
           </div>
 
           <!-- Tech stack -->
@@ -320,10 +354,11 @@
         <article class="mt-24 mb-4  flex flex-col">
           <img src="./src/assets/images/odinbook-small.png" alt="odinbook web app profile page">
           <h3 class="text-xl font-semibold mt-1 mb-4">Odinbook</h3>
-          <p class="mb-4">Odinbook is a Facebook-esque social media website with the ability to create profiles, make posts and
+          <p class="mb-4">Odinbook is a Facebook-esque social media website with the ability to create profiles, make
+            posts and
             comments, and grow your friend network. Key features include image uploads, log in with Facebook, responsive
             design, and solid accessiblity.</p>
-    
+
 
           <!-- Tech stack -->
           <div class=" hidden flex items-center justify-start my-2">
@@ -370,22 +405,24 @@
           </div>
           <!-- Project links -->
           <div class="flex items-center justify-start mb-6">
-            <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline" href="https://github.com/daniel-moderiano/odinbook">View code</a>
-            <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline" href="https://odinbook-dm.herokuapp.com/">Visit website</a>
+            <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline"
+              href="https://github.com/daniel-moderiano/odinbook">View code</a>
+            <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline"
+              href="https://odinbook-dm.herokuapp.com/">Visit website</a>
           </div>
 
           <!-- Tech stack -->
           <div class="border-t">
             <p class="text-sm text-gray-700 mt-1 italic">React, Tailwind, NodeJS, Express, MongoDB</p>
           </div>
-          
+
         </article>
 
       </section>
 
       <!-- CONTACT FORM section -->
       <section id="contact" class="my-4 w-full">
-        <h2 class="text-2xl font-semibold text-gray-800 w-full text-center">Get in touch</h2>
+        <h2 class="text-2xl font-semibold text-gray-800 w-full text-center mt-24">Get in touch</h2>
         <form class="mt-6 flex flex-col items-center w-full px-4">
           <label for="name" class="mb-4 w-full">
             Name
