--- a/index.html
+++ b/index.html
@@ -75,17 +75,13 @@
       </section>
 
       <!-- PROJECTS section -->
-      <section id="projects" class="mt-4 mb-24 w-full">
-        <div class="flex items-center justify-start mb-12 mt-[106px]">
-          <div class="w-full h-px bg-gray-800 rounded-full"></div>
-          <h2 class="font-bold text-3xl px-2 text-gray-800 rounded text-center inline-block shrink-0">
-            Projects
-          </h2>
-          <div class="w-full h-px bg-gray-800 rounded-full"></div>
-        </div>
+      <section id="projects" class="w-full">
+        <h2 class="font-semibold text-3xl text-gray-800 mb-7 mt-20">
+          Projects
+        </h2>
 
         <!-- OPTOMRX -->
-        <article class=" mb-4 flex flex-col">
+        <article class="flex flex-col">
           <img src="./src/assets/images/optomrx-small.png" alt="optomrx web app dashboard" class="shadow-md rounded">
           <h3 class="text-xl font-semibold mt-2 mb-4">OptomRx</h3>
           <p class="mb-4">OptomRx is an industry-first web app for Australian optometrists to create and manage
@@ -107,7 +103,7 @@
         </article>
 
         <!-- ODINBOOK -->
-        <article class="mt-24 mb-4  flex flex-col">
+        <article class="mt-16 flex flex-col">
           <img src="./src/assets/images/odinbook-small.png" alt="odinbook web app profile page"
             class="shadow-md rounded-sm">
           <h3 class="text-xl font-semibold mt-2 mb-4">Odinbook</h3>
@@ -135,14 +131,10 @@
 
       <!-- ABOUT section -->
       <!-- If issues with SVG flashing on load continue, add explicit height/width properties to the SVG tag itself -->
-      <section id="about" class="my-4 w-full">
-        <div class="flex items-center justify-start mb-12 mt-[106px]">
-          <div class="w-full h-px bg-gray-800 rounded-full"></div>
-          <h2 class="font-bold text-3xl px-2 text-gray-800 rounded text-center inline-block shrink-0">
-            About
-          </h2>
-          <div class="w-full h-px bg-gray-800 rounded-full"></div>
-        </div>
+      <section id="about" class="w-full">
+        <h2 class="font-semibold text-3xl text-gray-800 mb-6 mt-20">
+          About me
+        </h2>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quibusdam sunt repudiandae, asperiores quo
           cumque. Nulla quasi voluptates non omnis dolor doloremque rerum sapiente? Expedita rem odit accusantium eos
@@ -305,7 +297,7 @@
             </ul>
           </section>
 
-          <section class="my-3">
+          <section class="mt-3">
             <h4 class="font-light uppercase text-sm border-b mb-3 w-32">General</h4>
             <ul class="flex gap-x-6">
               <li class="flex flex-col items-center justify-center w-12 h-16">
@@ -339,31 +331,29 @@
       </section>
 
       <!-- CONTACT FORM section -->
-      <section id="contact" class="my-4 mb-24 w-full">
-        <div class="flex items-center justify-start mb-12 mt-[106px]">
-          <div class="w-full h-px bg-gray-800 rounded-full"></div>
-          <h2 class="font-bold text-3xl px-2 text-gray-800 rounded text-center inline-block shrink-0">
-            Contact
-          </h2>
-          <div class="w-full h-px bg-gray-800 rounded-full"></div>
-        </div>
+      <section id="contact" class="mb-20 w-full">
+        <h2 class="font-semibold text-3xl text-gray-800 mb-2 mt-20">
+          Contact Me
+        </h2>
+        <p class="text-sm text-slate-600 italic">Please fill out all fields</p>
+
         <form class="mt-6 flex flex-col items-start justify-start w-full">
           <label for="name" class="mb-4 w-full">
             Name
             <input
-              class="w-full mt-2 border rounded-sm border-slate-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400"
+              class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400 shadow-sm"
               type="text" required>
           </label>
           <label for="email" class="mb-4 w-full">
             Email
             <input
-              class="w-full mt-2 border rounded-sm border-slate-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400"
+              class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400 shadow-sm"
               type="email" required>
           </label>
           <label for="message" class="mb-4 w-full">
             Message
             <textarea
-              class="w-full mt-2 border rounded-sm border-slate-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400"
+              class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400 shadow-sm"
               name="message" id="message" cols="30" rows="10" required></textarea>
           </label>
           <button class="rounded py-2 px-4 bg-blue-700 text-white font-semibold">Send message</button>
