--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </a>
           </li>
           <li role="none" class="mr-3">
-            <a href="#" class="underline flex items-center justify-center font-semibold" target="_blank"
+            <a href="#" class="underline text-lg flex items-center justify-center font-semibold" target="_blank"
               rel="no-referrer">
               Resume
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-3 ml-1 mt-0.5">
@@ -337,26 +337,29 @@
 
       <!-- CONTACT FORM section -->
       <section id="contact" class="mb-20 w-full">
-        <h2 class="font-semibold text-3xl text-gray-800 mb-2 mt-[86px]">
+        <h2 class="font-semibold text-3xl text-gray-800 mb-6 mt-[86px]">
           Contact Me
         </h2>
-        <p class="text-sm text-slate-600 italic">Please fill out all fields</p>
+        <p class="">If you'd like to reach me, please fill out the form below. You can also reach me via <a class="underline" target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/daniel-moderiano-2a0429a9/">LinkedIn</a> or <a class="underline" href="mailto:daniel.moderiano@outlook.com">email</a>.</p>
 
         <form class="mt-6 flex flex-col items-start justify-start w-full">
           <label for="name" class="mb-4 w-full">
             Name
+            <span class="text-red-600">*</span>
             <input
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400 shadow-sm"
               type="text" required>
           </label>
           <label for="email" class="mb-4 w-full">
             Email
+            <span class="text-red-600">*</span>
             <input
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400 shadow-sm"
               type="email" required>
           </label>
           <label for="message" class="mb-4 w-full">
             Message
+            <span class="text-red-600">*</span>
             <textarea
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400 shadow-sm"
               name="message" id="message" cols="30" rows="10" required></textarea>
