--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <title>Daniel Moderiano | Web Developer</title>
 </head>
 
-<body class="relative">
+<body class="relative text-gray-800">
 
   <header role="banner"
-    class="px-2 py-3 text-black shadow-sm fixed top-0 left-0 w-full font-light text-base bg-white/90 backdrop-blur-sm transition-all duration-300 z-10">
+    class="px-2 py-3 text-gray-800 shadow-sm fixed top-0 left-0 w-full font-light text-[17px] bg-white/90 backdrop-blur-sm transition-all duration-300 z-10">
     <nav id="mainmenu" role="navigation" aria-label="Main menu">
       <ul class="flex items-center justify-evenly" role="menubar">
         <li class="px-2" role="none">
@@ -74,8 +74,8 @@
           </li>
         </ul>
         
-        <div id="seework" class="absolute bottom-4 flex flex-col items-center justify-center w-full text-center opacity-100 transition-all duration-300">
-          <p class="text-xl">See my work</p>
+        <div id="seework" class="absolute bottom-0 flex flex-col items-center justify-center w-full text-center opacity-0 transition-all duration-300">
+          <p class="text-[19px]">See my work</p>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="w-5 -mt-1"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"/></svg>
         </div>
       </section>
@@ -103,7 +103,7 @@
 
           <!-- Project links -->
           <div class="flex items-center justify-start mb-6">
-            <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline"
+            <a class="block hover:no-underline mr-6 text-gray-800 text-lg underline"
               href="https://github.com/daniel-moderiano/optom-rx">View code</a>
             <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline" href="https://optomrx.net/">Visit
               website</a>
@@ -130,7 +130,7 @@
 
           <!-- Project links -->
           <div class="flex items-center justify-start mb-6">
-            <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline"
+            <a class="block hover:no-underline mr-6 text-gray-800 text-lg underline"
               href="https://github.com/daniel-moderiano/odinbook">View code</a>
             <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline"
               href="https://odinbook-dm.herokuapp.com/">Visit website</a>
@@ -347,22 +347,22 @@
             Name
             <span class="text-red-600">*</span>
             <input
-              class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400 shadow-sm"
+              class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-600/30 focus:border-blue-600 shadow-sm"
               type="text" required>
           </label>
           <label for="email" class="mb-4 w-full">
             Email
             <span class="text-red-600">*</span>
             <input
-              class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400 shadow-sm"
+              class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-600/30 focus:border-blue-600 shadow-sm"
               type="email" required>
           </label>
           <label for="message" class="mb-4 w-full">
             Message
             <span class="text-red-600">*</span>
             <textarea
-              class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-300/30 focus:border-blue-400 shadow-sm"
-              name="message" id="message" cols="30" rows="10" required></textarea>
+              class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-blue-600/30 focus:border-blue-600 shadow-sm"
+              name="message" id="message" cols="30" rows="6" required></textarea>
           </label>
           <button class="rounded-md py-2 px-4 bg-slate-600 text-white font-semibold">Send message</button>
         </form>
